--- a/Demo.html
+++ b/Demo.html
@@ -17,6 +17,9 @@
     <b><a id="Story">Story</a></b>
     <b><a id="Contacts">Contacts</a></b>
     <b><a id="Projects">Projects</a></b>
+    <b><a id="Commercial">Commercial</a></b>
+
+
 
 
 </div>
@@ -61,6 +64,7 @@
 
     <footer id="foot"> &#169Copyright of Deeksha</footer>
     <!--Flex box-->
+    
 
 
     </body>
